--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
     "crons": [{
-      "path": "/api/products/${category}",
+      "path": "/api/products",
       "schedule": "0 10 * * *"
     }]
   }
