--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.5.7",
+    "crypto-js": "^4.2.0",
     "firebase": "^10.7.0",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
